# PCAB_Debugger

./: PCAB_Debugger.sln  README.md
PCAB_Debugger_ACS/: App.config  App.xaml  App.xaml.cs  OffsetDAT_Sample.csv  OffsetDAT_Sample.xlsx  OffsetDAT_SampleEx.xlsx  PCAB_Debugger_ACS.csproj  README.md  clsGNSS.cs  clsPANEL.cs  clsPCAB.cs  clsPOS.cs  clsReadDAT.cs  clsSearchList.cs  winMain.xaml  winMain.xaml.cs  winPCAB_PhaseMonitor.xaml  winPCAB_PhaseMonitor.xaml.cs  winPCAB_SensorMonitor.xaml  winPCAB_SensorMonitor.xaml.cs  winPOS.xaml  winPOS.xaml.cs
PCAB_Debugger_ACS/MWComLibCS/: MWComLibCS.FileFormats.deps.json  MWComLibCS.FileFormats.xml  MWComLibCS.deps.json  (+1 more)
PCAB_Debugger_ComLib/: PCAB_Debugger_ComLib.csproj  app.config  clsAsyncButton.cs  clsCOLOR.cs  clsPCAB_IO.cs  clsPNA835x.cs  clsPOS.cs  clsSERIAL.cs  clsSLIP.cs  clsSearchList.cs  cntAUTO.xaml  cntAUTO.xaml.cs  cntBOARD.xaml  cntBOARD.xaml.cs  cntConfig.xaml  cntConfig.xaml.cs  cntConfigPorts.xaml  cntConfigPorts.xaml.cs  cntConfigSettings.xaml  cntConfigSettings.xaml.cs  cntLaLinput.xaml  cntLaLinput.xaml.cs  cntMonitor.xaml  cntMonitor.xaml.cs  cntMonitorATT.xaml  cntMonitorATT.xaml.cs  cntMonitorMagPhase.xaml  cntMonitorMagPhase.xaml.cs  cntMonitorPHASE.xaml  cntMonitorPHASE.xaml.cs  cntPOS.xaml  cntPOS.xaml.cs
PCAB_Debugger_GUI/: App.config  App.xaml  App.xaml.cs  CommandBase.cs  Form1.Designer.cs  Form1.cs  PCAB_Debugger_GUI.csproj  Program.cs  README.md  Style.xaml  clsAsyncButton.cs  clsIO.cs  clsPCAB.cs  clsPCAB_IO.cs  clsPNA835x.cs  clsSERIAL.cs  clsSLIP.cs  clsSLPI.cs  cntAUTO.xaml  cntAUTO.xaml.cs  cntBOARD.xaml  cntBOARD.xaml.cs  cntConfig.xaml  cntConfig.xaml.cs  cntConfigSettings.xaml  cntConfigSettings.xaml.cs  cntMonitor.xaml  cntMonitor.xaml.cs  packages.config  winEditor.xaml  winEditor.xaml.cs  winEditorOLD.xaml  winEditorOLD.xaml.cs  winLoop.xaml  winLoop.xaml.cs  winLoopOLD.xaml  winLoopOLD.xaml.cs  winMain.xaml  winMain.xaml.cs  winMainOLD.xaml  (+5 more)
PCAB_Debugger_GUI_Setup/: PCAB_Debugger_GUI_Setup.vdproj
PCAB_Debugger_RP2040/: CMakeLists.txt  README.md  ROM.xlsx
PCAB_Debugger_RP2040/PCAB_Debugger/: CMakeLists.txt  PCAB_Debugger.cpp  README.md  config.h  enum.h  subfunc.cpp  subfunc.h
PCAB_Debugger_RP2040/PCAB_Debugger_FW/: CMakeLists.txt  Configure.hpp  PCAB_Debugger_FW.cpp  PCAB_Debugger_FW.hpp  config.h  enum.h  subfunc.cpp  subfunc.h
PCAB_Debugger_RP2040/PCAB_Debugger_FW/MWComLibCPP_library/: MWComLibCPP_library.cpp  MWComLibCPP_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/: CMakeLists.txt  MWComLibRaspico_library.cpp  MWComLibRaspico_library.h  MWComLibRaspico_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/adc_library/: adc_library.cpp  adc_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/ds18b20_library/: ds18b20_library.cpp  ds18b20_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/flash_library/: CMakeLists.txt  flash_library.cpp  flash_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/onewire_library/: CMakeLists.txt
PCAB_Debugger_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/spi_library/: CMakeLists.txt  spi_library.cpp  spi_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW/MWComLibRaspico_library/uart_library/: CMakeLists.txt  uart_library.cpp  uart_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW/PCAB_Debugger_library/: CMakeLists.txt  PCAB_Debugger_library.cpp  PCAB_Debugger_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW/onewire_library/: CMakeLists.txt
PCAB_Debugger_RP2040/PCAB_Debugger_FW/uart_library/: CMakeLists.txt  uart_library.cpp  uart_library.h  uart_library.hpp
PCAB_Debugger_RP2040/PCAB_Debugger_FW_Pico/: CMakeLists.txt  PCAB_Debugger_FW_Pico.cpp
(+17 files in other folders)
